<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pressureaccelerator.PressAccActivity" >

    <TextView
        android:id="@+id/textViewTitleBarometerPressureAltitude"
        android:text="@string/baro_air_pres"
        android:textColor="#0835C9" 
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewTitlePress"
        android:text="@string/title"
        android:textColor="#0835C9"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitleBarometerPressureAltitude"
        android:layout_marginTop="27dp" />

    <TextView
        android:id="@+id/TextViewTitleAltd"
        android:text="@string/Altitude"
		android:textSize="15sp"
        android:textColor="#0835C9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTitlePress"
        android:layout_alignStart="@+id/textViewTitlePress"
        android:layout_alignRight="@+id/textViewTitlePress"
        android:layout_alignEnd="@+id/textViewTitlePress"
        android:layout_below="@+id/textViewTitlePress" />

    <TextView
        android:id="@+id/textViewAltd"
        android:textColor="#08C9BD"
        android:textSize="15sp" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextViewTitleAltd"
        android:layout_alignBottom="@+id/TextViewTitleAltd"
        android:layout_alignLeft="@+id/textViewPress"
        android:layout_alignStart="@+id/textViewPress"
		android:text="Hello" />

    <TextView
        android:id="@+id/textViewTitlePressDiff"
        android:text="@string/press_diff"
		android:textSize="15sp"
        android:textColor="#0835C9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextViewTitleAltd"
        android:layout_alignStart="@+id/TextViewTitleAltd"
        android:layout_below="@+id/TextViewTitleAltd"
        android:layout_marginTop="98dp" />

    <TextView
        android:id="@+id/textViewP0"
        android:textColor="#08C9BD"
        android:textSize="15sp" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewTitlePressDiff"
        android:layout_alignBottom="@+id/textViewTitlePressDiff"
        android:layout_centerHorizontal="true"
		android:text="Hello" />

    <TextView
        android:id="@+id/textViewP1"
        android:textColor="#08C9BD"
        android:textSize="15sp" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewAltd"
        android:layout_alignStart="@+id/textViewAltd"
        android:layout_alignTop="@+id/textViewP0"
		android:text="Hello" />

    <TextView
        android:id="@+id/textViewTitleAltdDiff"
        android:text="@string/alt_diff"
		android:textSize="15sp"
        android:textColor="#0835C9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTitlePressDiff"
        android:layout_alignStart="@+id/textViewTitlePressDiff"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/textViewAltdDiff"
        android:textColor="#08C9BD"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewTitleAltdDiff"
        android:layout_alignBottom="@+id/textViewTitleAltdDiff"
        android:layout_alignLeft="@+id/textViewP1"
        android:layout_alignStart="@+id/textViewP1"
		android:text="Hello" />

    <Button
        android:id="@+id/buttonStart"
        android:onClick="startClick"
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTitleAltdDiff"
        android:layout_alignStart="@+id/textViewTitleAltdDiff"
        android:layout_below="@+id/textViewTitleAltdDiff" />

    <Button
        android:id="@+id/buttonFinish"
        android:onClick="finishClick"
        android:text="@string/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonStart"
        android:layout_toEndOf="@+id/buttonStart"
        android:layout_toRightOf="@+id/buttonStart" />

    <TextView
        android:id="@+id/textViewTitleLevelChanged"
        android:text="@string/level_changed"
		android:textSize="15sp"
        android:textColor="#0835C9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonStart"
        android:layout_alignStart="@+id/buttonStart"
        android:layout_below="@+id/buttonStart"
        android:layout_marginTop="27dp" />

    <TextView
        android:id="@+id/textViewLevelChanged"
        android:textColor="#08C9BD"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewTitleLevelChanged"
        android:layout_alignBottom="@+id/textViewTitleLevelChanged"
        android:layout_alignLeft="@+id/textViewAltdDiff"
        android:layout_alignStart="@+id/textViewAltdDiff"
		android:text="Hello" />

    <TextView
        android:id="@+id/textViewTitleUpperThres"
        android:text="@string/upper_threshold"
		android:textSize="15sp"
        android:textColor="#0835C9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTitleLevelChanged"
        android:layout_alignStart="@+id/textViewTitleLevelChanged"
        android:layout_below="@+id/textViewTitleLevelChanged"
        android:layout_marginTop="14dp" />

    <TextView
        android:id="@+id/textViewUpperThres"
        android:textColor="#08C9BD"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewTitleUpperThres"
        android:layout_alignBottom="@+id/textViewTitleUpperThres"
        android:layout_alignLeft="@+id/textViewLevelChanged"
        android:layout_alignStart="@+id/textViewLevelChanged"
		android:text="Hello" />

    <Button
        android:id="@+id/buttonMinusThres"
        android:text="@string/minus_threshold"
        android:onClick="upperThres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTitleUpperThres"
        android:layout_alignStart="@+id/textViewTitleUpperThres"
        android:layout_below="@+id/textViewTitleUpperThres" />

    <Button
        android:id="@+id/buttonPlusThres"
        android:text="@string/plus_threshold"
        android:onClick="upperThres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonMinusThres"
        android:layout_alignStart="@+id/buttonMinusThres"
        android:layout_below="@+id/buttonMinusThres" />

    <TextView
        android:id="@+id/textViewPress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewAltd"
        android:layout_alignEnd="@+id/textViewTitleBarometerPressureAltitude"
        android:layout_alignRight="@+id/textViewTitleBarometerPressureAltitude"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/buttonFinish"
        android:layout_toEndOf="@+id/buttonFinish"
        android:text="Hello"
        android:textColor="#08C9BD"
        android:textSize="15sp" />

</RelativeLayout>
